# qa_guru_python_3_17

./: pyproject.toml
test_project/: pyproject.toml
test_project/tests/: test_github.py
